--- a/dependencies/android/build.gradle
+++ b/dependencies/android/build.gradle
@@ -8,6 +8,15 @@ repositories {
 android {
 	compileSdkVersion Integer.parseInt(project.ANDROID_BUILD_SDK_VERSION)
 	buildToolsVersion project.ANDROID_BUILD_TOOLS_VERSION
+
+	defaultConfig {
+		minSdkVersion 19
+		targetSdkVersion Integer.parseInt(project.ANDROID_BUILD_SDK_VERSION)
+	}
+	compileOptions {
+		sourceCompatibility JavaVersion.VERSION_1_8
+		targetCompatibility JavaVersion.VERSION_1_8
+	}
 }
 
 dependencies {
