--- a/dependencies/android/src/main/AndroidManifest.xml
+++ b/dependencies/android/src/main/AndroidManifest.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="org.haxe.extension.kizzyrpc">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+	package="org.haxe.extension.kizzyrpc">
+
+	<uses-permission android:name="android.permission.INTERNET" />
+
 	<application android:debuggable="::DEBUG::" android:hardwareAccelerated="true" />
 </manifest>
